rewrite splitLines w/ ComponentFlattener